--- a/WebContent/main.css
+++ b/WebContent/main.css
@@ -346,12 +346,14 @@ style>#hor-minimalist-b {
 	font-weight: normal;
 	color: #000;
 	border-bottom: 2px solid #6678b1;
+	text-align: center;
 }
 
 #hor-minimalist-b td {
 	border-bottom: 1px solid #ccc;
 	color: #000;
 	padding: 6px 8px;
+	text-align: center;
 }
 
 #hor-minimalist-b tbody tr:hover td {
